# algtars

./: 404.html  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  tailwind.config.js
assets/: TitilliumWeb-Black-40c69027720620ef.ttf.br  TitilliumWeb-Bold-fac4dde2c093d74c.ttf.br  TitilliumWeb-ExtraLight-a552ba8fd8411d96.ttf.br  TitilliumWeb-Light-08537d5b63f40556.ttf.br  TitilliumWeb-Regular-ba5ec5f6e29fa94d.ttf.br  TitilliumWeb-SemiBold-5c13838fb249c1a2.ttf.br  algtars-033bb732dad99ecf.js  algtars-033bb732dad99ecf.js.br  algtars-07352c8ddfd8853a.js  algtars-07352c8ddfd8853a.js.br  algtars-182fb0c3aa9f5f8a.js  algtars-182fb0c3aa9f5f8a.js.br  algtars-348a3eda941004ac.js  algtars-348a3eda941004ac.js.br  algtars-39a18918ecc0b29a.js  algtars-39a18918ecc0b29a.js.br  algtars-5b9e917f1c6f70d9.js  algtars-5b9e917f1c6f70d9.js.br  algtars-8273d3d41d83ecf5.js  algtars-8273d3d41d83ecf5.js.br  algtars-db2ee2817667b21f.js  algtars-db2ee2817667b21f.js.br  algtars-e612440176792947.js  algtars-e612440176792947.js.br  algtars_bg-06de8ee22f76689e.wasm.br  algtars_bg-3736df7074239bea.wasm.br  algtars_bg-3ce3d39fa05e3ca9.wasm.br  algtars_bg-5e4ec2223b966fee.wasm.br  algtars_bg-79f17c19bd35cf50.wasm  algtars_bg-79f17c19bd35cf50.wasm.br  algtars_bg-8523caff447bb00b.wasm  algtars_bg-8523caff447bb00b.wasm.br  algtars_bg-9af69a3ca4dec52a.wasm.br  algtars_bg-add4edb692966f54.wasm.br  algtars_bg-b4e74fa26a6cf8bc.wasm  algtars_bg-b4e74fa26a6cf8bc.wasm.br  algtars_bg-c0e94ad0867d889d.wasm  algtars_bg-c0e94ad0867d889d.wasm.br  algtars_bg-d2f54707293c2fc8.wasm.br  extra.txt  (+27 more)
src/: main.rs
(+122 files in other folders)
