[package]
name = "algtars"
version = "0.1.0"
authors = ["thesh <malte@famihlefeld.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-radio = "0.5.2"
dioxus-sdk = { version = "0.6.0", features = ["timing", "storage"] }
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Blob", "BlobPropertyBag", "Url"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
